--- a/docs/life/diary/20241018.md
+++ b/docs/life/diary/20241018.md
@@ -1,10 +1,11 @@
-# 今日速记
+# 20241018速记
 
 > 简记碎碎念：
     叔本华说：生命是一团欲望，欲望不能满足便痛苦，满足就无聊，人生就在痛苦和无聊之间摇摆
 
 
 科研挣扎于进一步确认好数据集、部署好模型，看论文真的太枯燥了。老是不想学习怎么办。。。
+还是得老老实实把这几个数据集模型的论文给看了，再说下一步。
 
 今天抽空做了两道leetcode，涉及到很简单的滑动窗口和简单dp。今日没学英语。
 
@@ -15,5 +16,6 @@
 有关实验室：周又回来了，说要上午学习，下午再陪女朋友。xm
            川川郁郁寡欢，终日与大敌（配置毕设环境）缠斗，煞是精彩。
 
-
+晚上问董，怎么成infp了啊。。。
+还有明星田某
 
