--- a/docs/llm/幻觉综述.md
+++ b/docs/llm/幻觉综述.md
@@ -440,7 +440,9 @@ Hallucination Detection Benchmarks
 
 ​	
 
-# 总结
+# 简单总结
+
+## 分类
 
 对于<font color='green'>幻觉分类</font>，本文（2023.11）将幻觉分为两大类
 
@@ -492,6 +494,8 @@ eg: <font color='blue'>instruct inconsistent</font>
 
 
 ---------
+
+## 成因
 
 对于<font color='green'>幻觉的</font><font color='green'>成因</font>，主要从数据、训练、推理三方面讲起，
 
@@ -568,6 +572,8 @@ eg: <font color='blue'>instruct inconsistent</font>
 
 ------
 
+## 检测
+
 <font color='red'>幻觉检测：</font>
 
 1.事实性检测：
@@ -612,6 +618,8 @@ eg: <font color='blue'>instruct inconsistent</font>
 
 -----------
 
+## 消减
+
 依据幻觉的<font color='green'>成因</font>，主要从数据、训练、推理三方面讲起，
 
 <font color='red'>幻觉消减：</font>
@@ -630,9 +638,9 @@ eg: <font color='blue'>instruct inconsistent</font>
 
 ​				<font color='red'>模型编辑：</font>
 
-​					**修改内部参数**：直接修改模型参数进行知识修改的黑科技，先定位知识在参数中的位置再进行修改，例如ROME，MEMIT。
+​					**修改内部参数**：<font color='green'>直接修改模型参数</font>进行知识修改的黑科技，先定位知识在参数中的位置再进行修改，例如ROME，MEMIT。
 
-​					**增加外部参数**：通过外接模型或外接层，来进行知识判断和补充知识存储，不过知识范围的判断难度很高泛化性可能不好，方法有SERAC,T-Patcher, NKB等
+​					**增加外部参数**：<font color='green'>通过外接模型或外接层，来进行知识判断和补充知识存储</font>，不过知识范围的判断难度很高泛化性可能不好，方法有SERAC,T-Patcher, NKB等
 
 ​				<font color='red'>RAG检索增强:</font>
 
@@ -647,6 +655,8 @@ eg: <font color='blue'>instruct inconsistent</font>
 ​	2. 训练
 
 ​		<font color='blue'>单向表示不足</font>。遵循因果语言建模范式，<font color='green'>llm仅根据先前的标记以从左到右的方式预测后续的标记。</font><font color='red'>双向自回归方法的 BATGPT</font>。
+
+​		**预训练策略**：Attention-shapening正则器，通过把self-attention进行稀疏化正则处理，降低soft-attention向前传递的误差，类似L1正则。
 
 ​		缓解SFT和预训练知识差异的方法，可以<font color='green'>对SFT样本中模型可能不确定的知识进行样本调整允许模型表达怀疑和拒绝</font>，代表有R-tuning，不过这类方法的泛化性可能不及RLHF
 
@@ -673,5 +683,5 @@ eg: <font color='blue'>instruct inconsistent</font>
 
 - **`Context-aware Decode`**：每个token的解码概率由基于上文的条件解码概率，和不基于上文的无条件解码概率的边际差异决定，降低模型内化知识的影响提高上文的影响
 - **`KL-guided-sampling`**：以上CAD的动态优化版本，基于无条件解码和条件解码的KL距离来动态调整P值，这里距离反映上文对模型推理的影响程度。算是CAD和top-p的折中版本
-- **`Contrastive-Decoding`**：一个大模型和一个小模型进行同步解码，先用大模型的top-p/k作为候选token，再使用小模型生成的token概率分布作为“噪声分布”，从大模型分布中diff掉小模型的分布得到更准确的token预测。
+- **`Contrastive-Decoding`**：一个大模型和一个小模型进行同步解码，先用大模型的top-p/k作为候选token，再使用<font color='green'>小模型生成的token概率分布作为“噪声分布”</font>，从大模型分布中diff掉小模型的分布得到更准确的token预测。
 
