--- a/docs/llm/大模型微调.md
+++ b/docs/llm/大模型微调.md
@@ -363,8 +363,6 @@ Alpaca想做的是，在base Llama上训练出chat能力
 > 对于分类问题，如果说让模型直接生成input的话，各个class类别的占比就很可能混淆，
 >
 > 因此，可以采用<font color='red'>output-first</font>，即首先让模型生成一个类别，然后再根据其生成的类别来生成其对应的instance
->
-> 
 
 ![image-20241210191324119](../picture.asset/image-20241210191324119.png)
 
@@ -428,4 +426,40 @@ alpaca是用gpt生成instruct数据，然后在llama base上训练出来的
 > 因此，可以认为fine-tuning比较好
 
 
+
+## 对齐
+
+![image-20241213200353655](../picture.asset/image-20241213200353655.png)
+
+
+
+
+
+![image-20241213200242389](../picture.asset/image-20241213200242389.png)
+
+相较于sft的昂贵数据，alignment的数据收集较容易一些，
+
+alignment一般用于解决hallucination、harmless等问题
+
+
+
+收集偏好数据，训练奖励模型。
+
+​         
+
+
+
+​                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
+
+![image-20241213202558091](../picture.asset/image-20241213202558091.png)
+
+![image-20241213202646992](../picture.asset/image-20241213202646992.png)
+
+
+
+
+
+RLHF需要两个dataset，一个prompt dataset，一个preference dataset
+
+本课程将介绍如何使用RLHF去tuning Llama2，在summarization任务上。
 
