--- a/docs/life/找实习项目.md
+++ b/docs/life/找实习项目.md
@@ -480,13 +480,15 @@ os.environ["TOKENIZERS_PARALLELISM"] = "false"
 
 首先是文件读取
 
+将比赛的数据集从csv转换为二进制parquet格式存储
+
 ```python
 from pathlib import Path
 
 data_path = Path("/kaggle/input/kaggle-llm-science-exam")
 
 
-if os.getenv("KAGGLE_IS_COMPETITION_RERUN"):
+if os.getenv("KAGGLE_IS_COMPETITION_RERUN"):# kaggle的环境变量
     test = pd.read_csv(data_path / "test.csv")
     CALC_SCORE = False
 else:
