--- a/docs/code/python爬虫.ipynb
+++ b/docs/code/python爬虫.ipynb
@@ -600,7 +600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch118",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
