--- a/docs/code/tmp.ipynb
+++ b/docs/code/tmp.ipynb
@@ -264,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch118",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
