--- a/docs/llm/test_sft.ipynb
+++ b/docs/llm/test_sft.ipynb
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,8 @@
     "    num_train_epochs=1,\n",
     "    per_device_train_batch_size=1,\n",
     "    logging_steps=1,  # 每10步记录一次日志\n",
-    "    save_steps=164  # 每100步保存一次检查点\n",
+    "    save_steps=164,  # 每100步保存一次检查点\n",
+    "    learning_rate=2e-5  # 设置学习率\n",
     ")\n",
     "#注意下面新增加args\n",
     "traing_args.remove_unused_columns=False \n",
